--- a/scss/style.scss
+++ b/scss/style.scss
@@ -108,7 +108,6 @@ h1,h2,h3,h4,h5,h6{
 ul{
   list-style: none;
 }
-
 li{
   line-height: 175%;
 }
@@ -135,9 +134,8 @@ textarea {
 input:focus, select:focus, textarea:focus {
   outline-color: #e9150b;
 }
+
 // DECORATION
-
-
 .fade {
   opacity: 1.0;
   transition: all 500ms;
@@ -265,6 +263,83 @@ input:focus, select:focus, textarea:focus {
   border-style: solid;
   border-width: 9px 7px 0 7px;
   border-color: #ffffff transparent transparent transparent;
+}
+
+// Animation
+
+@keyframes spin {
+  0% {
+  transform:rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes orbit--sm {
+  0%,
+  to {
+    -webkit-transform: translate(0%, 0%)
+  }
+  25%,
+  75% {
+    -webkit-transform: translate(-2.5%, 7.5%)
+  }
+  50% {
+    -webkit-transform: translate(-5%, 3.5%)
+  }
+}
+
+@keyframes orbit--lg {
+  0%,
+  to {
+    -webkit-transform: translate(0%, 0%)
+  }
+  25%,
+  75% {
+    -webkit-transform: translate(-2.5%, 10%)
+  }
+  50% {
+    -webkit-transform: translate(-10%, 5%)
+  }
+}
+
+@keyframes innerOrbit {
+  0% {
+    transform: rotate(0deg)
+  }
+  to {
+    transform: rotate(360deg)
+  }
+}
+
+@keyframes psPlusFlip {
+  0% {
+    transform: rotateY(180deg)
+  }
+  50% {
+    transform: rotateY(90deg)
+  }
+  to {
+    transform: rotateY(0deg)
+  }
+}
+
+@keyframes gradient {
+  0%, 100% {
+    background-position: 10% 0%;
+  }
+  50% {
+    background-position: 91% 100%;
+  }
+}
+
+.in-view {
+  animation:spin 4s linear;
+}
+
+.orbit{
+  animation: innerOrbit 120s ease-out infinite;
 }
 .t_btn:hover{
   cursor: pointer;
@@ -544,6 +619,7 @@ input:focus, select:focus, textarea:focus {
   line-height: 33px;
   letter-spacing: 0.005em;
   text-transform: uppercase;
+  transition: 0.5s ease-in-out;
 }
 
 .bigger{
@@ -1049,8 +1125,8 @@ header {
     }
     .how_we_work_right:after{
       content: '';
-      background-image: linear-gradient(to bottom, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%);
-      //background-size: 50px 50px;
+      background-image: linear-gradient(45deg, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%);
+      animation: gradient 6s ease infinite;;
       background-repeat: no-repeat;
       box-sizing: border-box;
       position: absolute;
@@ -1059,6 +1135,7 @@ header {
       width: 580px;
       height: 510px;
       z-index: 0;
+      background-size: 600% 100%;
     }
 
 
@@ -1851,9 +1928,13 @@ height: 200px;
   }
   .tab_control_container {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
     padding-bottom: 3rem;
+
+    ul {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
     .btn{
       color: white;
       border: none;
@@ -1868,6 +1949,7 @@ height: 200px;
     .active2{
       color: #e9150b;
     }
+
   }
   /* The Modal (background) */
   .modal {
@@ -4075,6 +4157,12 @@ div{
     transform: none;
     margin: 3em 0;
   }
+  .portfolio_bottom .right img {
+    width: 350px;
+  }
+  .portfolio_bottom .p_bottom .xxx1 {
+    margin: 3rem 0 0 2rem;
+  }
   .vacancy_wrapper .vacancy-right:after {
     right: -50px;
     width: 400px;
@@ -4779,6 +4867,116 @@ div{
     flex-wrap: nowrap;
     align-items: flex-start;
   }
+
+  .wrapper-dropdown-3 {
+    /* Size and position */
+    position: relative;
+    width: 200px;
+    margin: 0 auto;
+    padding: 10px;
+
+    /* Styles */
+    background: #fff;
+    border-radius: 7px;
+    border: 1px solid rgba(0,0,0,0.15);
+    box-shadow: 0 1px 1px rgba(50,50,50,0.1);
+    cursor: pointer;
+    outline: none;
+
+    /* Font settings */
+    font-weight: bold;
+    color: #8AA8BD;
+  }
+  .wrapper-dropdown-3:after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    margin-top: -3px;
+    border-width: 6px 6px 0 6px;
+    border-style: solid;
+    border-color: #8aa8bd transparent;
+  }
+  .wrapper-dropdown-3 .dropdown {
+    /* Size &amp; position */
+    position: absolute;
+    top: 140%;
+    left: 0;
+    right: 0;
+
+    /* Styles */
+    background: white;
+    border-radius: inherit;
+    border: 1px solid rgba(0,0,0,0.17);
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    font-weight: normal;
+    transition: all 0.5s ease-in;
+    list-style: none;
+
+    /* Hiding */
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  .wrapper-dropdown-3 .dropdown li a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: #8aa8bd;
+    border-bottom: 1px solid #e6e8ea;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,1);
+    transition: all 0.3s ease-out;
+  }
+
+  .wrapper-dropdown-3 .dropdown li i {
+    float: right;
+    color: inherit;
+  }
+
+  .wrapper-dropdown-3 .dropdown li:first-of-type a {
+    border-radius: 7px 7px 0 0;
+  }
+
+  .wrapper-dropdown-3 .dropdown li:last-of-type a {
+    border-radius: 0 0 7px 7px;
+    border: none;
+  }
+
+  /* Hover state */
+
+  .wrapper-dropdown-3 .dropdown li:hover a {
+    background: #f3f8f8;
+  }
+  .wrapper-dropdown-3 .dropdown:after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: 100%;
+    right: 15px;
+    border-width: 0 6px 6px 6px;
+    border-style: solid;
+    border-color: #fff transparent;
+  }
+
+  .wrapper-dropdown-3 .dropdown:before {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: 100%;
+    right: 13px;
+    border-width: 0 8px 8px 8px;
+    border-style: solid;
+    border-color: rgba(0,0,0,0.1) transparent;
+  }
+  .wrapper-dropdown-3.active .dropdown {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
   .portfolio_wrapper .portfolio .xxx1 {
     margin: 0 1rem 2rem;
   }
@@ -4825,6 +5023,12 @@ div{
     height: 81px;
     bottom: 0;
     right: 0;
+  }
+  .portfolio_bottom {
+    align-items: center;
+    .p_bottom .left, .p_bottom .right {
+      width: 100%;
+    }
   }
 
   //News
