--- a/scss/style.scss
+++ b/scss/style.scss
@@ -189,6 +189,19 @@ input:focus, select:focus, textarea:focus {
   cursor: pointer;
 }
 
+.phone_list::after {
+  content: "";
+  background-image: url(../src/img/main/r_arrow.svg);
+  background-size: 10px 10px;
+  box-sizing: border-box;
+  transform: rotate(90deg);
+  height: 10px;
+  width: 10px;
+  position: relative;
+  bottom: 0;
+  left: 9px;
+  display: inline-block;
+}
 .adv_sm_btn::after, .adv_sm_btn2::after {
   content: "";
   background-image: url(../src/img/main/r_arrow.svg);
@@ -268,7 +281,6 @@ input:focus, select:focus, textarea:focus {
 .exodus__ps-shape {
   animation: orbit--lg 8s ease-in-out infinite;
   animation-delay: 0s;
-  /*position: absolute;*/
   position: relative;
   bottom: 5%;
   right: -2rem;
@@ -296,28 +308,28 @@ input:focus, select:focus, textarea:focus {
 @keyframes orbit--sm {
   0%,
   to {
-    -webkit-transform: translate(0%, 0%)
+    transform: translate(0%, 0%)
   }
   25%,
   75% {
-    -webkit-transform: translate(-2.5%, 7.5%)
+    transform: translate(-2.5%, 7.5%)
   }
   50% {
-    -webkit-transform: translate(-5%, 3.5%)
+    transform: translate(-5%, 3.5%)
   }
 }
 
 @keyframes orbit--lg {
   0%,
   to {
-    -webkit-transform: translate(0%, 0%)
+    transform: translate(0%, 0%)
   }
   25%,
   75% {
-    -webkit-transform: translate(-2.5%, 10%)
+    transform: translate(-2.5%, 10%)
   }
   50% {
-    -webkit-transform: translate(-10%, 5%)
+    transform: translate(-10%, 5%)
   }
 }
 
@@ -327,6 +339,15 @@ input:focus, select:focus, textarea:focus {
   }
   to {
     transform: rotate(360deg)
+  }
+}
+
+@keyframes innerOrbit2 {
+  0% {
+    transform: rotate(360deg)
+  }
+  to {
+    transform: rotate(0deg)
   }
 }
 
@@ -355,8 +376,13 @@ input:focus, select:focus, textarea:focus {
   animation:spin 4s linear;
 }
 
+
+
 .orbit{
   animation: innerOrbit 120s ease-out infinite;
+}
+.orbit_rev {
+  animation: innerOrbit2 120s ease-out infinite ;
 }
 .t_btn:hover{
   cursor: pointer;
@@ -926,13 +952,10 @@ header {
       top: -140px;
       @include F_C;
 
-      img:first-child{
+      div:first-child{
         transform: translate(50px, 20px);
       }
-      img:last-child{
-        width: 25px;
-        transform: translate(70px, 20px)rotate(45deg);
-      }
+
     }
   }
 
@@ -1195,10 +1218,29 @@ header {
         height: 100%;
         justify-content: space-between;
         margin-bottom: 15px;
+        
+        .gallery_item {
+          position: relative;
+        }
 
+        .gallery_item:hover .gallery_hover {
+          opacity: 1;
+        }
         .gallery_item img {
           width: 100%;
           height: 100%;
+        }
+
+        .gallery_hover {
+          opacity: 0;
+          transition: opacity .3s linear;
+          background: #fff;
+          font-size: 1.6rem;
+          position: absolute;
+          pointer-events: none;
+          padding: 1rem;
+          top: 0;
+          left: 0;
         }
       }
       .hidden_g {
@@ -1973,7 +2015,7 @@ height: 200px;
   .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 6;
     padding-top: 100px;
     left: 0;
     top: 0;
@@ -1997,8 +2039,8 @@ height: 200px;
   .close {
     color: white;
     position: absolute;
-    top: 10px;
-    right: 25px;
+    top: 8%;
+    right: 15%;
     font-size: 35px;
     font-weight: bold;
   }
@@ -2626,7 +2668,7 @@ display: flex;
 text-align: right;
 align-items: center;
 
-div{
+div:first-child{
   margin-right: 55px;
 }
 
