--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,6 +92,11 @@ body {
   color: white;
 }
 
+.hidden {
+  // display: none;
+  visibility: hidden;
+}
+
 a{
   text-decoration: none;
   color: white;
@@ -189,19 +194,20 @@ input:focus, select:focus, textarea:focus {
   cursor: pointer;
 }
 
-.phone_list::after {
-  content: "";
-  background-image: url(../src/img/main/r_arrow.svg);
-  background-size: 10px 10px;
-  box-sizing: border-box;
-  transform: rotate(90deg);
-  height: 10px;
-  width: 10px;
+.phone_list{
   position: relative;
-  bottom: 0;
-  left: 9px;
-  display: inline-block;
+  width: 105px;
+  transform: perspective(1px) translateZ(0);
+  transition-duration: 0.3
 }
+
+.phone_list:hover {
+
+}
+.tel_t{
+  cursor: pointer;
+}
+
 .adv_sm_btn::after, .adv_sm_btn2::after {
   content: "";
   background-image: url(../src/img/main/r_arrow.svg);
@@ -293,7 +299,6 @@ input:focus, select:focus, textarea:focus {
   z-index: 2;
 }
 
-
 // Animation
 
 @keyframes spin {
@@ -363,6 +368,21 @@ input:focus, select:focus, textarea:focus {
   }
 }
 
+@keyframes fFadeIn {
+	0% {
+		opacity: 0;
+		transform: translate3d(0, -35%, 0);
+		transition-timing-function: ease-out
+	}
+	to {
+		opacity: 1;
+		transform: none;
+		transition-timing-function: ease-in
+	}
+}
+
+// Gradient Background
+
 @keyframes gradient {
   0%, 100% {
     background-position: 10% 0%;
@@ -375,8 +395,6 @@ input:focus, select:focus, textarea:focus {
 .in-view {
   animation:spin 4s linear;
 }
-
-
 
 .orbit{
   animation: innerOrbit 120s ease-out infinite;
@@ -398,6 +416,163 @@ input:focus, select:focus, textarea:focus {
   left: 5px;
   transition: all 500ms;
 }
+
+
+// 3 Triangles
+ 
+ .triangle__figure--small {
+    //  position: absolute;
+    //  bottom: 48%;
+    //  right: 1.5rem;
+     z-index: 0;
+     opacity: 0;
+     animation-duration: .5s;
+     animation-fill-mode: forwards;
+     animation-name: fFadeIn;
+     animation-delay: 0s;
+ }
+ .triangle__figure--small img {
+     animation: orbit--sm 8s ease-in-out infinite;
+     animation-delay: 1s;
+     height: 105px;
+     width: 40px;
+ }
+ .triangle__figure--medium {
+    //  position: absolute;
+    //  bottom: 34%;
+    //  right: 4rem;
+     z-index: 0;
+     opacity: 0;
+     animation-duration: .5s;
+     animation-fill-mode: forwards;
+     animation-name: fFadeIn;
+     animation-delay: 1.25s;
+ }
+ 
+  .triangle__figure--medium img {
+     animation: orbit--sm 8s ease-in-out infinite;
+     animation-delay: .5s;
+     height:60px;
+     width: 60px;
+ }
+ .triangle__figure--large {
+    //  position: absolute;
+    //  bottom: 20%;
+    //  right: -1rem;
+     z-index: 0;
+     opacity: 0;
+     animation-duration: .5s;
+     animation-fill-mode: forwards;
+     animation-name: fFadeIn;
+     animation-delay: 1.75s;
+ }
+  .triangle__figure--large img {
+     animation: orbit--sm 8s ease-in-out infinite;
+     animation-delay: 0s;
+     height: 6rem;
+     width: 6rem;
+ }
+
+// Hover Arrow Animation
+
+@-webkit-keyframes hvr-icon-hang {
+  0% {
+    -webkit-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+  50% {
+    -webkit-transform: translateY(2px);
+    transform: translateY(2px);
+  }
+  100% {
+    -webkit-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+}
+@keyframes hvr-icon-hang {
+  0% {
+    -webkit-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+  50% {
+    -webkit-transform: translateY(2px);
+    transform: translateY(2px);
+  }
+  100% {
+    -webkit-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+}
+@-webkit-keyframes hvr-icon-hang-sink {
+  100% {
+    -webkit-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+}
+@keyframes hvr-icon-hang-sink {
+  100% {
+    -webkit-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+}
+.hvr-icon-hang {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-icon-hang .hvr-icon {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.hvr-icon-hang:hover .hvr-icon, .hvr-icon-hang:focus .hvr-icon, .hvr-icon-hang:active .hvr-icon {
+  -webkit-animation-name: hvr-icon-hang-sink, hvr-icon-hang;
+  animation-name: hvr-icon-hang-sink, hvr-icon-hang;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
+}
+
+.fa-chevron-down:before {
+  content: "";
+  background-image: url(../src/img/main/r_arrow.svg);
+  background-size: 10px 10px;
+  transform: rotate(90deg);
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  top: -18px;
+  right: -20px;
+  display: inline-block;
+  }
+.fa {
+      display: inline-block;
+      font-size: inherit;
+      text-rendering: auto;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+  }
+ .hvr-icon-hang .hvr-icon {
+      display: block;
+      -webkit-transform: translateZ(0);
+      transform: translateZ(0);
+  }
+
+
+
+// MIXINS
 
 @mixin WhiteStripes{
 
@@ -707,7 +882,7 @@ header {
   transition: top 0.2s ease-in-out;
 }
 .nav-up {
-  top: -100px;
+  top: -130px;
 }
 .nav-down {
   background-color: transparent;
@@ -912,22 +1087,23 @@ header {
 
   .service_triangles{
     position: absolute;
+    width: 125px;
     display: flex;
     flex-direction: column;
     bottom: -69px;
 
-     img:first-child {
+    div:first-child {
         width: 25px;
         height: 25px;
-        transform: translate(10px,50px);
+        // transform: translate(10px,50px);
     }
 
-    img:nth-child(2) {
+    div:nth-child(2) {
       width: 55px;
       height: 55px;
       transform: translateX(55px) rotate(60deg)
     }
-    img:last-child {
+    div:last-child {
       width: 100px;
       height: 100px;
       transform: rotate(80deg)translateY(20px)
@@ -952,10 +1128,15 @@ header {
       top: -140px;
       @include F_C;
 
-      div:first-child{
+      .exodus__ps-shape{
         transform: translate(50px, 20px);
       }
-
+      .tri_little{
+        transform: translate(135px, -50px) rotate(59deg);
+        height: 25px;
+        width: 25px;
+      }
+      
     }
   }
 
@@ -1231,6 +1412,44 @@ header {
           height: 100%;
         }
 
+        .thumb {
+          position: relative;
+          cursor: pointer;
+          transform: scale(1);
+	        transition: transform 250ms ease-in-out;
+        }
+        .img-container {
+          position: relative;
+          margin: 0;
+          width: 100%;
+          height: 100%;
+        }
+
+        .img-container-bg {
+          opacity: 0;
+          visibility: hidden;
+          position: fixed;
+          z-index: 9;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          background-color: rgba(0,0,0,0.5);
+          transition-property: opacity, visibility;
+          transition-duration: 350ms;
+          transition-timing-function: linear;
+        }
+        .img-container.is-active .img-container-bg {
+          opacity: 1;
+          visibility: visible;
+        }
+        .img-container.is-active .thumb {
+          z-index: 99;
+          transform: scale(1.8);
+        }
+        .img-container:hover::after {
+          opacity: 1;
+        }
         .gallery_hover {
           opacity: 0;
           transition: opacity .3s linear;
