--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1099,6 +1099,13 @@ li.menu_category:hover:after{
   margin-top: 24px;
 }
 
+.sections_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow: hidden;
+}
+
 //MAIN SERVICE SECTION
 .main_service_wrapper {
   display: flex;
