--- a/scss/style.scss
+++ b/scss/style.scss
@@ -202,6 +202,10 @@ input:focus, select:focus, textarea:focus {
   transition-duration: 0.3s;
 }
 
+.phones {
+  font-size: 20px;
+}
+
 .phone_list:hover {
 
 }
